f5-azure-arm-templates/examples/modules/network/azuredeploy.json
{
	"$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"location": {
			"type": "string"
		},
		"mgmtNsgName": {
			"type": "string"
		},
		"useExistingNsg": {
			"type": "bool"
		},
		"restrictedSrcAddress": {
			"type": "string"
		},
		"provisionPublicIP": {
			"type": "string"
		},
		"virtualNetworkName": {
			"type": "string"
		},
		"vnetAddressPrefix": {
			"type": "string"
		},
		"mgmtSubnetName": {
			"type": "string"
		},
		"mgmtSubnetPrefix": {
			"type": "string"
		},
		"appSubnetName": {
			"type": "string"
		},
		"appSubnetPrefix": {
			"type": "string"
		},
		"tagValues": {
			"type": "object"
		}
	},
	"variables": {
    	"networkApiVersion": "2017-11-01"
  	},
	"resources": [
		{
			"apiVersion": "[variables('networkApiVersion')]",
			"location": "[parameters('location')]",
			"name": "[parameters('mgmtNsgName')]",
			"condition": "[not(parameters('useExistingNsg'))]",
			"properties": {
				"securityRules": [
					{
						"name": "mgmt_allow_https",
						"properties": {
							"access": "Allow",
							"description": "",
							"destinationAddressPrefix": "*",
							"destinationPortRange": "8443",
							"direction": "Inbound",
							"priority": 101,
							"protocol": "Tcp",
							"sourceAddressPrefix": "[parameters('restrictedSrcAddress')]",
							"sourcePortRange": "*"
						}
					},
					{
						"name": "ssh_allow_22",
						"properties": {
							"access": "Allow",
							"description": "",
							"destinationAddressPrefix": "*",
							"destinationPortRange": "22",
							"direction": "Inbound",
							"priority": 102,
							"protocol": "Tcp",
							"sourceAddressPrefix": "[parameters('restrictedSrcAddress')]",
							"sourcePortRange": "*"
						}
					},
					{
						"name": "app_allow_http",
						"properties": {
							"access": "Allow",
							"description": "",
							"destinationAddressPrefix": "*",
							"destinationPortRange": "80",
							"direction": "Inbound",
							"priority": 110,
							"protocol": "Tcp",
							"sourceAddressPrefix": "*",
							"sourcePortRange": "*"
						}
					},
					{
						"name": "app_allow_https",
						"properties": {
							"access": "Allow",
							"description": "",
							"destinationAddressPrefix": "*",
							"destinationPortRange": "443",
							"direction": "Inbound",
							"priority": 111,
							"protocol": "Tcp",
							"sourceAddressPrefix": "*",
							"sourcePortRange": "*"
						}
					},
					{
						"name": "allow_loadBalancer_traffic",
						"properties": {
							"access": "Allow",
							"description": "",
							"destinationAddressPrefix": "AzureLoadBalancer",
							"destinationPortRange": "*",
							"direction": "Outbound",
							"priority": 110,
							"protocol": "Tcp",
							"sourceAddressPrefix": "*",
							"sourcePortRange": "*"
						}
					},
					{
						"name": "disallow_inbound_traffic",
						"properties": {
							"access": "[if(equals(parameters('provisionPublicIP'), 'No'), 'Deny', 'Allow')]",
							"description": "",
							"destinationAddressPrefix": "*",
							"destinationPortRange": "*",
							"direction": "Inbound",
							"priority": 113,
							"protocol": "Tcp",
							"sourceAddressPrefix": "Internet",
							"sourcePortRange": "*"
						}
					}
				]
			},
			"tags": "[if(empty(parameters('tagValues')), json('null'), parameters('tagValues'))]",
			"type": "Microsoft.Network/networkSecurityGroups"
		},
		{
            "apiVersion": "[variables('networkApiVersion')]",
            "location": "[parameters('location')]",
            "name": "[parameters('virtualNetworkName')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('vnetAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('mgmtSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('mgmtSubnetPrefix')]"
                        }
					},
					{
                        "name": "[parameters('appSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('appSubnetPrefix')]"
                        }
                    }
                ]
            },
            "tags": "[if(empty(parameters('tagValues')), json('null'), parameters('tagValues'))]",
            "type": "Microsoft.Network/virtualNetworks"
        }
	],
	"outputs": {}
}
